revert: :rewind: reverts commit 16a7127ea22f7b1541b39fa3c8724d4c6aef8a14

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "js/index.js",
   "scripts": {
     "test": "node js/index.js",
-    "build": "npm update && tsc -p tsconfig.json"
+    "build": "npm update && tsc -p tsconfig.json",
+    "css": 
   },
   "repository": {
     "type": "git",
