--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jquery": "^3.6.0",
     "serve": "^13.0.2",
     "typescript": "^4.6.3",
+    "uadetect": "^2.0.1",
     "vite": "^2.9.5"
   },
   "devDependencies": {
