--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "outDir": "./js/",
+        "target": "es2019",
     },
     "compileOnSave": true,
     "files": [
