--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "The PorkyProductions.io website source code.",
   "main": "js/index.js",
   "scripts": {
-    "test": "npx serve",
-    "build": "npx tsc -p tsconfig.json"
+    "test": "npx vite",
+    "build": "npx tsc -p tsconfig.json",
+    "vite": "npx vite build",
+    "start": "npx serve"
   },
   "repository": {
     "type": "git",
@@ -29,6 +31,7 @@
   "dependencies": {
     "bootstrap-icons": "^1.8.1",
     "jquery": "^3.6.0",
+    "sass": "^1.51.0",
     "serve": "^13.0.2",
     "typescript": "^4.6.4",
     "uadetect": "^2.0.2",
