--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/jquery": "^3.5.14",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.13",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "vite-plugin-pwa": "^0.12.0"
   }
 }
