--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "uadetect": "^3.1.2",
-    "bootstrap-icons": "^1.9.1",
-    "sass": "^1.54.1",
-    "tailwindcss": "^3.1.7",
-    "postcss": "^8.4.14",
     "autoprefixer": "^10.4.8",
-    "typescript": "^4.7.4"
+    "bootstrap-icons": "^1.9.1",
+    "postcss": "^8.4.14",
+    "sass": "^1.54.1",
+    "svelte-typewriter": "^3.0.1",
+    "tailwindcss": "^3.1.7",
+    "typescript": "^4.7.4",
+    "uadetect": "^3.1.2"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
