narrowly avoided a massive merge conflict

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "porkyproductions.github.io",
+  "name": "porkyproductions.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
