--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
+    "@types/jquery": "^3.5.14",
     "svelte": "^3.49.0",
     "vite": "^3.0.0"
   }
