--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splinetool/runtime": "^0.9.97",
     "autoprefixer": "^10.4.8",
     "bootstrap-icons": "^1.9.1",
     "jquery": "^3.6.0",
